--- a/styles.css
+++ b/styles.css
@@ -356,6 +356,16 @@ body, html {
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
 }
 
+/* Mobile adjustments */
+@media screen and (max-width: 768px) {
+    .start-button {
+        font-size: 2rem;
+        padding: 1.5rem 3rem;
+        width: 90%;
+        max-width: 400px;
+    }
+}
+
 /* Mobile landscape adjustments */
 @media screen and (orientation: landscape) and (max-height: 500px) {
     .bottom {
@@ -369,5 +379,12 @@ body, html {
     .disclaimer p {
         font-size: 10px;
         line-height: 1.3;
+    }
+
+    .start-button {
+        font-size: 1.5rem;
+        padding: 1rem 2rem;
+        width: 80%;
+        max-width: 350px;
     }
 }
